# Ethara_AI

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  skills-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: customer.py  order.py  product.py
backend/app/routers/: customers.py  orders.py  products.py
backend/app/schemas/: __init__.py  customer.py  order.py  product.py
backend/app/services/: customer_service.py  order_service.py  product_service.py
frontend/: nginx.conf
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js  customers.js  orders.js  products.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Customers.jsx  Dashboard.jsx  Orders.jsx  Products.jsx
