[project]
name = "inventory-backend"
version = "0.1.0"
description = "Inventory & Order Management System API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
]
